--- a/src/pages/launch/[id].astro
+++ b/src/pages/launch/[id].astro
@@ -8,23 +8,13 @@ if (id) {
 	launch = await getLaunchById({ id });
 }
 
-export async function getStaticPaths() {
-	const launches = await getLatestLaunches();
-	return launches.map((launch) => ({
-		params: { id: launch.id },
-	}))
-}
+export const prerender = false;
 ---
 
 <Layout title={`Launch ${id}`}>
-	<article>
-		{launch ? (
-			<>
-				<h1>{launch.name}</h1>
-				<p>{launch.details}</p>
-			</>
-		) : (
-			<p>Launch not found</p>
-		)}
+	<article class="flex gap-y-4 flex-col">
+		<img class="w-80 h-auto" src={launch?.links?.patch.small} alt={launch?.name}>
+		<h2 class="text-4xl font-bold text-white">Launch #{launch?.flight_number}</h2>
+		<p class="text-lg">{launch?.details}</p>
 	</article>
 </Layout>
